--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -29,8 +29,8 @@
 <script>
 
 
-let VSBoxCounter = function () {
-    let count = 0;
+var VSBoxCounter = function () {
+    var count = 0;
     return {
         set: function () {
             return ++count;
@@ -39,7 +39,7 @@ let VSBoxCounter = function () {
 }();
 
 function vanillaSelectBox(domSelector, options) {
-    let self = this;
+    var self = this;
     this.instanceOffset = VSBoxCounter.set();
     this.domSelector = domSelector;
     this.root = document.querySelector(domSelector)
@@ -88,15 +88,15 @@ function vanillaSelectBox(domSelector, options) {
         }
     }
     this.repositionMenu = function(){
-        let rect = self.main.getBoundingClientRect();
+        var rect = self.main.getBoundingClientRect();
         this.drop.style.left = rect.left+"px";
         this.drop.style.top = rect.bottom+"px";
     }
 
     this.init = function () {
-		let self = this;
+		var self = this;
         this.root.style.display = "none";
-        let already = document.getElementById("btn-group-" + self.domSelector);
+        var already = document.getElementById("btn-group-" + self.domSelector);
         if (already) {
             already.remove();
         }
@@ -109,15 +109,15 @@ function vanillaSelectBox(domSelector, options) {
 			this.main.style.minHeight =  (this.userOptions.maxHeight+10) + "px";
 		}
 
-		let btnTag = self.userOptions.stayOpen ? "div" : "button";
+		var btnTag = self.userOptions.stayOpen ? "div" : "button";
         this.button = document.createElement(btnTag);
 		
-        let presentValue = this.main.value;
+        var presentValue = this.main.value;
         this.main.appendChild(this.button);
         this.title = document.createElement("span");
         this.button.appendChild(this.title);
         this.title.classList.add("title");
-        let caret = document.createElement("span");
+        var caret = document.createElement("span");
         this.button.appendChild(caret);
         caret.classList.add("caret");
         caret.style.position = "absolute";
@@ -129,7 +129,7 @@ function vanillaSelectBox(domSelector, options) {
 			this.title.style.fontStyle = "italic";
 			this.title.style.verticalAlign = "20%";
 		}
-        let rect = this.button.getBoundingClientRect();
+        var rect = this.button.getBoundingClientRect();
         this.top = rect.bottom;
         this.left = rect.left;
         this.drop = document.createElement("div");
@@ -155,9 +155,9 @@ function vanillaSelectBox(domSelector, options) {
         if (this.isMultiple) {
             this.ul.classList.add("multi");
         }
-        let selectedTexts = ""
-        let sep = "";
-        let nrActives = 0;
+        var selectedTexts = ""
+        var sep = "";
+        var nrActives = 0;
 		
         if (this.search) {
             this.searchZone = document.createElement("div");
@@ -169,7 +169,7 @@ function vanillaSelectBox(domSelector, options) {
             this.inputBox.setAttribute("type", "text");
             this.inputBox.setAttribute("id", "search_" + this.domSelector);
 
-            let fontSizeForP = this.isMultiple ? "8px" : "6px";
+            var fontSizeForP = this.isMultiple ? "8px" : "6px";
             var para = document.createElement("p");
             this.ul.appendChild(para);
             para.style.fontSize = fontSizeForP;
@@ -181,9 +181,9 @@ function vanillaSelectBox(domSelector, options) {
         }
         this.options = document.querySelectorAll(this.domSelector + " option");
         Array.prototype.slice.call(this.options).forEach(function (x) {
-            let text = x.textContent;
-            let value = x.value;
-            let classes = x.getAttribute("class");
+            var text = x.textContent;
+            var value = x.value;
+            var classes = x.getAttribute("class");
 			if(classes) 
 				{
 					classes=classes.split(" ");
@@ -192,8 +192,8 @@ function vanillaSelectBox(domSelector, options) {
 				{
 					classes=[];
 				}
-            let li = document.createElement("li");
-            let isSelected = x.hasAttribute("selected");
+            var li = document.createElement("li");
+            var isSelected = x.hasAttribute("selected");
             self.ul.appendChild(li);
             li.setAttribute("data-value", value);
             li.setAttribute("data-text", text);
@@ -221,7 +221,7 @@ function vanillaSelectBox(domSelector, options) {
         });
         if (self.multipleSize != -1) {
             if (nrActives > self.multipleSize) {
-                let wordForItems = self.userOptions.translations.items || "items"
+                var wordForItems = self.userOptions.translations.items || "items"
                 selectedTexts = nrActives + " " + wordForItems;
             }
         }
@@ -234,15 +234,15 @@ function vanillaSelectBox(domSelector, options) {
         this.listElements = this.drop.querySelectorAll("li");
         if (self.search) {
             self.inputBox.addEventListener("keyup", function (e) {
-                let searchValue = e.target.value.toUpperCase();
-                let searchValueLength = searchValue.length;
+                var searchValue = e.target.value.toUpperCase();
+                var searchValueLength = searchValue.length;
                 if (searchValueLength < 2) {
                     Array.prototype.slice.call(self.listElements).forEach(function (x) {
                         x.classList.remove("hide");
                     });
                 } else {
                     Array.prototype.slice.call(self.listElements).forEach(function (x) {
-                        let text = x.getAttribute("data-text").toUpperCase();
+                        var text = x.getAttribute("data-text").toUpperCase();
                         if (text.indexOf(searchValue) == -1) {
                             x.classList.add("hide");
                         } else {
@@ -282,9 +282,9 @@ function vanillaSelectBox(domSelector, options) {
                 e.stopPropagation();
                 return;
             }
-            let choiceValue = e.target.getAttribute("data-value");
-            let choiceText = e.target.getAttribute("data-text");
-            let className = e.target.getAttribute("class");
+            var choiceValue = e.target.getAttribute("data-value");
+            var choiceText = e.target.getAttribute("data-text");
+            var className = e.target.getAttribute("class");
             if (!self.isMultiple) {
                 self.root.value = choiceValue;
                 self.title.textContent = choiceText;
@@ -304,7 +304,7 @@ function vanillaSelectBox(domSelector, options) {
 					docListener();
 				}
             } else {
-                let wasActive = false;
+                var wasActive = false;
                 if (className) {
                     wasActive = className.indexOf("active") != -1;
                 }
@@ -313,11 +313,11 @@ function vanillaSelectBox(domSelector, options) {
                 } else {
                     e.target.classList.add("active");
                 }
-                let selectedTexts = ""
-                let sep = "";
-                let nrActives = 0;
-                let nrAll = 0;
-                for (let i = 0; i < self.options.length; i++) {
+                var selectedTexts = ""
+                var sep = "";
+                var nrActives = 0;
+                var nrAll = 0;
+                for (var i = 0; i < self.options.length; i++) {
                     nrAll++;
                     if (self.options[i].value == choiceValue) {
                         self.options[i].selected = !wasActive;
@@ -329,11 +329,11 @@ function vanillaSelectBox(domSelector, options) {
                     }
                 }
                 if (nrAll == nrActives) {
-                    let wordForAll = self.userOptions.translations.all || "all";
+                    var wordForAll = self.userOptions.translations.all || "all";
                     selectedTexts = wordForAll;
                 } else if (self.multipleSize != -1) {
                     if (nrActives > self.multipleSize) {
-                        let wordForItems = self.userOptions.translations.items || "items"
+                        var wordForItems = self.userOptions.translations.items || "items"
                         selectedTexts = nrActives + " " + wordForItems;
                     }
                 }
@@ -364,7 +364,7 @@ function vanillaSelectBox(domSelector, options) {
 
 
     vanillaSelectBox.prototype.setValue = function (values) {
-		let self = this;
+		var self = this;
         if (values == null || values == undefined || values == "") {
             self.empty();
         } else {
@@ -379,7 +379,7 @@ function vanillaSelectBox(domSelector, options) {
                         values = values.split(",");
                     }
                 }
-                let foundValues = [];
+                var foundValues = [];
                 if (type(values) == "array") {
                     Array.prototype.slice.call(self.options).forEach(function (x) {
                         if (values.indexOf(x.value) != -1) {
@@ -389,10 +389,10 @@ function vanillaSelectBox(domSelector, options) {
                             x.selected = false;
                         }
                     });
-                    let selectedTexts = ""
-                    let sep = "";
-                    let nrActives = 0;
-                    let nrAll = 0;
+                    var selectedTexts = ""
+                    var sep = "";
+                    var nrActives = 0;
+                    var nrAll = 0;
                     Array.prototype.slice.call(self.listElements).forEach(function (x) {
                         nrAll++;
                         if (foundValues.indexOf(x.getAttribute("data-value")) != -1) {
@@ -405,11 +405,11 @@ function vanillaSelectBox(domSelector, options) {
                         }
                     });
                     if (nrAll == nrActives) {
-                        let wordForAll = self.userOptions.translations.all || "all";
+                        var wordForAll = self.userOptions.translations.all || "all";
                         selectedTexts = wordForAll;
                     } else if (self.multipleSize != -1) {
                         if (nrActives > self.multipleSize) {
-                            let wordForItems = self.userOptions.translations.items || "items"
+                            var wordForItems = self.userOptions.translations.items || "items"
                             selectedTexts = nrActives + " " + wordForItems;
                         }
                     }
@@ -417,9 +417,9 @@ function vanillaSelectBox(domSelector, options) {
                     self.privateSendChange();
                 }
             } else {
-                let found = false;
-                let text = "";
-                let classNames = ""
+                var found = false;
+                var text = "";
+                var classNames = ""
                 Array.prototype.slice.call(self.listElements).forEach(function (x) {
                     if (x.getAttribute("data-value") == values) {
                         x.classList.add("active");
@@ -460,7 +460,7 @@ function vanillaSelectBox(domSelector, options) {
     }
 
     vanillaSelectBox.prototype.privateSendChange = function () {
-        let event = document.createEvent('HTMLEvents');
+        var event = document.createEvent('HTMLEvents');
         event.initEvent('change', true, false);
         this.root.dispatchEvent(event);
     
@@ -481,14 +481,14 @@ function vanillaSelectBox(domSelector, options) {
     }
 	
     vanillaSelectBox.prototype.destroy = function () {
-        let already = document.getElementById("btn-group-" + this.domSelector);
+        var already = document.getElementById("btn-group-" + this.domSelector);
         if (already) {
             already.remove();
             this.root.style.display = "inline-block";
         }
     }
     vanillaSelectBox.prototype.disable = function () {
-        let already = document.getElementById("btn-group-" + this.domSelector);
+        var already = document.getElementById("btn-group-" + this.domSelector);
         if (already) {
             button = already.querySelector("button")
 			if(button) button.classList.add("disabled");
@@ -496,7 +496,7 @@ function vanillaSelectBox(domSelector, options) {
         }
     }
     vanillaSelectBox.prototype.enable = function () {
-        let already = document.getElementById("btn-group-" + this.domSelector);
+        var already = document.getElementById("btn-group-" + this.domSelector);
         if (already) {
             button = already.querySelector("button")
             if(button) button.classList.remove("disabled");
@@ -517,7 +517,7 @@ if (!('remove' in Element.prototype)) {
 }
 
 
-let mySelect = new vanillaSelectBox("#district_id_",{
+var mySelect = new vanillaSelectBox("#district_id_",{
     maxWidth: 500,
     maxHeight: 300,
     placeHolder: "Select District"
