--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -47,10 +47,16 @@
     margin-top: 30px;
 }
 
-.report, th, td{
-    border: 1px solid black;
-    padding: 15px;
-    text-align: center;
+table.report td{
+  border: 1px solid black;
+  padding: 15px;
+  text-align: center;
+}
+
+table.report th{
+  border: 1px solid black;
+  padding: 15px;
+  text-align: center;
 }
 
 .no-entries {
