--- a/app/views/admin_users/detailed_report.html.erb
+++ b/app/views/admin_users/detailed_report.html.erb
@@ -34,6 +34,10 @@
       </table>
     </div>
   </div>
+<% else %>
+  <div class="no-entries">
+    No Entries
+  </div>
 <% end %>
 <div class="heading-div">
   <h4>Live Overall Stats (<%= Date.today.strftime("%d-%m-%Y") %>)</h4>
