--- a/app/views/stats_reports/_show_cancelled_entries.html.erb
+++ b/app/views/stats_reports/_show_cancelled_entries.html.erb
@@ -34,5 +34,9 @@
     <div class="digg_pagination">
       <%= will_paginate cancelled_data_entries, :container => false %>
     </div>
+  <% else %>
+    <div class="no-entries">
+      No Entries
+    </div>
   <% end %>
 </div>
