--- a/app/assets/stylesheets/admin_users.scss
+++ b/app/assets/stylesheets/admin_users.scss
@@ -132,6 +132,7 @@ table#entries-table tr.header td{
 }
 
 #text{
+  border-radius: 5px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -298,4 +299,18 @@ table.last-update tr.header{
 
 #last-entry-report, #district-wise-report, #previous-updation-table, #cancelled-updation{
   padding: 20px 0;
+}
+
+.export-csv{
+  margin-left: 10px;
+  margin-top: 3px;
+}
+
+#import-csv-form h4{
+  font-weight: bold;
+  text-align: center;
+}
+
+#upload-file-field{
+  margin: 20px auto;
 }
