--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -206,3 +206,10 @@
 .width-100px{
   width: 100px;
 }
+
+.no-entries {
+  margin-top: 30px;
+  border: 1px solid gray;
+  text-align: center;
+  font-size: 20px;
+}
