import csv log completed wicked pdf binary file issue for ubuntu 19.10 needs fixing

--- a/app/assets/stylesheets/admin_users.scss
+++ b/app/assets/stylesheets/admin_users.scss
@@ -314,3 +314,15 @@ table.last-update tr.header{
 #upload-file-field{
   margin: 20px auto;
 }
+
+table#import-log-table{
+  margin-bottom: 20px;
+}
+
+.button-divs{
+  margin: 0 auto;
+}
+
+table#import-log-table td label{
+  margin-bottom: 0rem;
+}
